@@ -145,6 +145,9 @@ BUGFIXES:
   ZOOKEEPER-452. zookeeper performance graph should have percentage of reads
 rather than percentage of writes - zkperfRW-3.2.jpg (mahadev)
 
+  ZOOKEEPER-450. emphemeral cleanup not happening with session timeout. (breed
+via mahadev)
+
 IMPROVEMENTS:
   ZOOKEEPER-308. improve the atomic broadcast performance 3x.
   (breed via mahadev)
